Fix: VideoCard Img overflow

--- a/src/components/Card/VideoCard/VideoCard.module.css
+++ b/src/components/Card/VideoCard/VideoCard.module.css
@@ -5,15 +5,17 @@
   gap: var(--rem-75);
   font-family: sans-serif;
   max-height: 19rem;
+  transition: all 0.2s linear;
 }
 
 .video_card:hover {
-  box-shadow: 0px 0.1rem 0.2rem var(--color-white);
+  box-shadow: 0px 0.2rem 0.3rem var(--color-black);
+  transform: scale(103%);
 }
 
 .top_wrapper {
   position: relative;
-  max-width: 17rem;
+  max-width: 16.7rem;
   padding: 2px;
 }
 
@@ -25,7 +27,7 @@
 }
 
 .card_img {
-  width: 17rem;
+  width: 16.7rem;
   object-fit: cover;
   height: 10rem;
 }
